Changed message_space width to prevent horizontal scrolling

--- a/styles/chat.module.css
+++ b/styles/chat.module.css
@@ -468,9 +468,9 @@
 }
 .message_space
 {
-    width: 130%;
-    max-width: 130%;
-    min-width: 130%;
+    width: 100%;
+    max-width: 100%;
+    min-width: 100%;
     order: 2;
 }
 .self .message_main
